--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -12,15 +14,18 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.container {
+  width: calc(88vw);
+}
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  width: 100%;
   color: white;
 }
 
