--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,16 @@
   }
 }
 .container {
-  width: calc(88vw);
+  flex: 1;
+  /* padding: 30px; */
+  /* background-color: #fff; */
+  min-height: 100vh;
 }
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  width: 100%;
-  color: white;
+.match_component {
+  background-color: #fff;
+  padding: 20px;
+  margin: 20px;
+  min-height: calc(100vh - 100px);
 }
 
 .App-link {
